# iot-examples

./: .gitignore  .gitmodules  README.md  main.cpp
.github/: CODEOWNERS
arduino/ArduinoGPS/test_gps_serial/: test_gps_serial.ino
arduino/ArduinoGPS/test_gps_serial_UART/: test_gps_serial_UART.ino
arduino/ArduinoGPS/test_gps_serial_basic/: test_gps_serial_basic.ino
arduino/BT_AT_Commands/: BT_AT_Commands.ino
arduino/LCD5110_Graph/: LCD5110_Graph.cpp  LCD5110_Graph.h  keywords.txt  version.txt
arduino/MS5611/full_data/: full_data.ino
arduino/MS5611/ms5611_Wire/: ms5611_Wire.ino
arduino/Vario/MS5611V2/: MS5611V2.ino
arduino/Vario/VARIO_BT_MS5611/: VARIO_BT_MS5611.ino
arduino/Vario/VARIO_BZR_MS5611/: VARIO_BZR_MS5611.ino
esp32/PlatformIO/PressureSocket/: README.md  platformio.ini
esp32/PlatformIO/TTGO-Wifi/: platformio.ini
esp32/esp-idf/: SETUP.md
esp32/esp-idf/SerialToSerial/: .cproject  .project  sdkconfig
esp32/micropython/: SETUP.md  SETUP_MICROPYTHON.md
esp32/micropython/serial/: UART.py  simple_serial.py
nbproject/: Makefile-Debug.mk  configurations.xml
nbproject/private/: configurations.xml  private.xml  timestamps-192.168.1.137-pi-22
qmk/keymaps/garrigueta/: keymap.c
raspi/c-samples/opengl/: CMakeLists.txt  rpi_opengl_graph.c
raspi/c-samples/sample-c-app/: main.c
raspi/cpp-samples/GL2/: CMakeLists.txt  build.sh  gltest.cpp
raspi/cpp-samples/basic/: main.cpp
raspi/gpio/nbproject/: Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  (+1 more)
raspi/scripts/: install_c_cpp.sh  install_opengl.sh  install_python.sh
(+29 files in other folders)
